[package]
name = "rust-decision-tree"
version = "0.1.0"
authors = ["Jack <admin@deadcore.co.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "^0.4"
env_logger = "^0.7"
ndarray = "^0.13"
ndarray-csv = "^0.4"
csv = "^1.1"
rand = "^0.7"

[[bin]]
name = 'example'
path = 'src/bin/example.rs'
