[package]
name = "rune-data"
version = "0.1.0"
authors = ["Jack <admin@deadcore.co.uk>"]
edition = "2018"
workspace = "../.."

[features]
default = []

[lib]
name = "rune_data"

[dependencies]
log = "^0.4"
env_logger = "^0.7"
ndarray = "^0.13"
ndarray-rand="^0.11"
ndarray-csv = "^0.4"
csv = "^1.1"
rand = "^0.7"
rand_isaac = "^0.2"
ndarray-heterogeneous = { path = '../../ndarray-heterogeneous' }