[package]
name = "rune-decomposition"
version = "0.1.0"
authors = ["Jack <admin@deadcore.co.uk>"]
edition = "2018"
workspace = "../.."

[features]
default = []

[lib]
name = "rune_decomposition"

[dependencies]
log = "^0.4"
ndarray = "^0.13"
ndarray-stats = "^0.3"
ndarray-linalg = { version = "^0.12", features = ["intel-mkl"] }